# Multimodal-Pharm-RAG

./: .env.example  .gitignore  DEVLOG (3).md  DEVLOG.md  HANDOFF.md  README.md  pyproject.toml
api/: config.py  main.py  models.py
notebooks/: colab_full_test_setup.py
scripts/: README.md  build_text_store.py  check_labeler_coverage.py  check_pilltype_overlap.py  corrected_ndc_join.py  diagnose_ndc_join.py  diagnose_path_mismatch.py  evaluate.py  extract_sample_images.py  find_dr_exceptions.py  full_epillid_structure.py  inspect_bad_product_codes.py  inspect_epillid_labels.py  inspect_epillid_zip.py  inspect_images_zip.py  inspect_metadata.py  investigate_plain_splimage.py  test_digit_normalized_join.py  test_epillid_pillbox_text_join.py  test_join_hypothesis.py  test_leading_zero_theory.py  test_ndc_prefix_join.py  test_ndc_truncated_join.py  verify_epillid_labels.py  verify_nlmimage_join.py
src/pillrag/: __init__.py  data.py  embed.py  imprint.py  pipeline.py  segment.py  text_rag.py  train_metric_learning.py  visual_search.py
