[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pillrag"
version = "0.1.0"
description = "Multimodal RAG pipeline for pharmaceutical pill identification"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11"
]

[tool.setuptools.packages.find]
where = ["src"]
