[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pillrag"
version = "0.1.0"
description = "Multimodal RAG pipeline for pharmaceutical pill identification"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=2.1,<2.2",
    "scipy>=1.11,<1.15",
]

[tool.setuptools.packages.find]
where = ["src"]
